// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moveTile 가로 2 4 8 8 x=-1 1`] = `
Array [
  Object {
    "value": 2,
    "x": 1,
    "y": 1,
  },
  Object {
    "value": 4,
    "x": 2,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 3,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 3,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 3,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 2 4 8 8 x=1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "value": 4,
    "x": 3,
    "y": 1,
  },
  Object {
    "value": 2,
    "x": 2,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 4,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 2 x 8 8 x=-1 1`] = `
Array [
  Object {
    "value": 2,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 2,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 2,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 2,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 2 x 8 8 x=1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "value": 2,
    "x": 3,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 4,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 8 8 4 4 x=-1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 2,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 2,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 1,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 2,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 8 8 4 4 x=1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 4,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 4,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 3,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 3,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 3,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 8 8 4 4 y=-1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 2,
    "y": 1,
  },
  Object {
    "value": 4,
    "x": 3,
    "y": 1,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 8 8 4 4 y=1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 1,
    "y": 4,
  },
  Object {
    "value": 8,
    "x": 2,
    "y": 4,
  },
  Object {
    "value": 4,
    "x": 3,
    "y": 4,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 4,
  },
]
`;

exports[`moveTile 가로 여러 줄, 2 2 4 4, 8 x 4 4 x=-1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 2,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 2,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 2,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 2,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 1,
    "y": 2,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 2,
    "y": 2,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 2,
    "y": 2,
  },
  Object {
    "isMerged": true,
    "value": 4,
    "x": 1,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 2,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 2,
    "y": 2,
  },
]
`;

exports[`moveTile 가로 여러 줄, 2 2 4 4, 8 x 4 4 x=1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 4,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 4,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 2,
    "x": 3,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 2,
    "x": 3,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 4,
    "y": 2,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 4,
    "y": 2,
  },
  Object {
    "value": 8,
    "x": 3,
    "y": 2,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 4,
    "x": 3,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 4,
    "y": 2,
  },
]
`;

exports[`moveTile 세로 2 x 8 8 y=-1 1`] = `
Array [
  Object {
    "value": 2,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 2,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 2,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 1,
    "y": 2,
  },
]
`;

exports[`moveTile 세로 2 x 8 8 y=1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 4,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 4,
  },
  Object {
    "value": 2,
    "x": 1,
    "y": 3,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 1,
    "y": 4,
  },
]
`;

exports[`moveTile 세로 8 8 4 4 x=-1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 1,
    "y": 2,
  },
  Object {
    "value": 4,
    "x": 1,
    "y": 3,
  },
  Object {
    "value": 4,
    "x": 1,
    "y": 4,
  },
]
`;

exports[`moveTile 세로 8 8 4 4 x=1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 4,
    "y": 2,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 3,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 4,
  },
]
`;

exports[`moveTile 세로 8 8 4 4 y=-1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 1,
    "y": 2,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 1,
    "y": 2,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 1,
    "y": 1,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 1,
    "y": 2,
  },
]
`;

exports[`moveTile 세로 8 8 4 4 y=1 1`] = `
Array [
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 1,
    "y": 4,
  },
  Object {
    "isDisabled": true,
    "value": 4,
    "x": 1,
    "y": 4,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 3,
  },
  Object {
    "isDisabled": true,
    "value": 8,
    "x": 1,
    "y": 3,
  },
  Object {
    "isMerged": true,
    "value": 8,
    "x": 1,
    "y": 4,
  },
  Object {
    "isMerged": true,
    "value": 16,
    "x": 1,
    "y": 3,
  },
]
`;
